# modules/legacy/types/block.go
@@ -1,123 +1,0 @@
-package types
-
-import (
-	"sync"
-	"time"
-
-	tmbytes "github.com/tendermint/tendermint/libs/bytes"
-	"github.com/tendermint/tendermint/crypto"
-	"github.com/tendermint/tendermint/types"
-	tmprotoversion "github.com/tendermint/tendermint/proto/tendermint/version"
-)
-
-type Protocol uint64
-type Address = crypto.Address
-type SignedMsgType byte
-
-// Single block (with meta)
-type ResultBlock struct {
-	BlockMeta *BlockMeta `json:"block_meta"`
-	Block     *Block     `json:"block"`
-}
-
-// Block defines the atomic unit of a Tendermint blockchain.
-type Block struct {
-	mtx        sync.Mutex
-	Header     `json:"header"`
-	types.Data       `json:"data"`
-	Evidence   EvidenceData `json:"evidence"`
-	LastCommit *Commit      `json:"last_commit"`
-}
-
-// BlockMeta contains meta information about a block - namely, it's ID and Header.
-type BlockMeta struct {
-	BlockID types.BlockID `json:"block_id"` // the block hash and partsethash
-	Header  Header  `json:"header"`   // The block's Header
-}
-
-// MaxDataBytesUnknownEvide
-// Header defines the structure of a Tendermint block header.
-// NOTE: changes to the Header should be duplicated in:
-// - header.Hash()
-// - abci.Header
-// - /docs/spec/blockchain/blockchain.md
-type Header struct {
-	// basic block info
-	Version  tmprotoversion.Consensus `json:"version"`
-	ChainID  string            `json:"chain_id"`
-	Height   int64             `json:"height"`
-	Time     time.Time         `json:"time"`
-	NumTxs   int64             `json:"num_txs"`
-	TotalTxs int64             `json:"total_txs"`
-
-	// prev block info
-	LastBlockID types.BlockID `json:"last_block_id"`
-
-	// hashes of block data
-	LastCommitHash tmbytes.HexBytes `json:"last_commit_hash"` // commit from validators from the last block
-	DataHash       tmbytes.HexBytes `json:"data_hash"`        // transactions
-
-	// hashes from the app output from the prev block
-	ValidatorsHash     tmbytes.HexBytes `json:"validators_hash"`      // validators for the current block
-	NextValidatorsHash tmbytes.HexBytes `json:"next_validators_hash"` // validators for the next block
-	ConsensusHash      tmbytes.HexBytes `json:"consensus_hash"`       // consensus params for current block
-	AppHash            tmbytes.HexBytes `json:"app_hash"`             // state after txs from the previous block
-	LastResultsHash    tmbytes.HexBytes `json:"last_results_hash"`    // root hash of all results from the txs from the previous block
-
-	// consensus info
-	EvidenceHash    tmbytes.HexBytes `json:"evidence_hash"`    // evidence included in the block
-	ProposerAddress Address      `json:"proposer_address"` // original proposer of the block
-}
-
-
-// Commit contains the evidence that a block was committed by a set of validators.
-// NOTE: Commit is empty for height 1, but never nil.
-type Commit struct {
-	// NOTE: The Precommits are in order of address to preserve the bonded ValidatorSet order.
-	// Any peer with a block can gossip precommits by index with a peer without recalculating the
-	// active ValidatorSet.
-	BlockID    types.BlockID `json:"block_id"`
-	Precommits []*Vote `json:"precommits"`
-
-	// Volatile
-	firstPrecommit *Vote
-	hash           tmbytes.HexBytes
-	bitArray       *BitArray
-}
-
-type Vote struct {
-	Type             SignedMsgType `json:"type"`
-	Height           int64         `json:"height"`
-	Round            int32           `json:"round"`
-	BlockID          types.BlockID       `json:"block_id"` // zero if vote is nil.
-	Timestamp        time.Time     `json:"timestamp"`
-	ValidatorAddress Address       `json:"validator_address"`
-	ValidatorIndex   int           `json:"validator_index"`
-	Signature        []byte        `json:"signature"`
-}
-
-// BitArray is a thread-safe implementation of a bit array.
-type BitArray struct {
-	mtx   sync.Mutex
-	Bits  int      `json:"bits"`  // NOTE: persisted via reflect, must be exported
-	Elems []uint64 `json:"elems"` // NOTE: persisted via reflect, must be exported
-}
-
-// SignedHeader is a header along with the commits that prove it.
-// It is the basis of the lite client.
-type SignedHeader struct {
-	*Header `json:"header"`
-	Commit  *Commit `json:"commit"`
-}
-//-----------------------------------------------------------------------------
-
-// EvidenceData contains any evidence of malicious wrong-doing by validators
-type EvidenceData struct {
-	Evidence types.EvidenceList `json:"evidence"`
-
-	// Volatile
-	hash tmbytes.HexBytes
-}
-// EvidenceList is a list of Evidence. Evidences is not a word.
-
-//--------------------------------------------------------------------------------
